force-app/main/default/objects/ROTA__c/ROTA__c.object-meta.xml
<CustomObject>
    <label>ROTA</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>ROTA#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ROTAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>