force-app/main/default/objects/ROTA__c/fields/Desk_Phone__c.field-meta.xml
<CustomField>
    <fullName>Desk_Phone__c</fullName>
    <label>Desk Phone</label>
    <type>Phone</type>
</CustomField>