force-app/main/default/objects/ROTA__c/fields/Manager_DeskPhone__c.field-meta.xml
<CustomField>
    <fullName>Manager_DeskPhone__c</fullName>
    <label>Manager DeskPhone</label>
    <type>Phone</type>
</CustomField>