force-app/main/default/objects/ROTA__c/fields/Manager_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Manager_Mobile__c</fullName>
    <label>Manager Mobile</label>
    <type>Phone</type>
</CustomField>