force-app/main/default/objects/ROTA__c/fields/No_of_Hours__c.field-meta.xml
<CustomField>
    <fullName>No_of_Hours__c</fullName>
    <formula>((End_Date__c -  Start_Date__c )*24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>