force-app/main/default/objects/ROTA__c/fields/Secondary_DeskPhone__c.field-meta.xml
<CustomField>
    <fullName>Secondary_DeskPhone__c</fullName>
    <label>Secondary DeskPhone</label>
    <type>Phone</type>
</CustomField>