force-app/main/default/objects/ROTA__c/fields/Secondary_Mail__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Mail__c</fullName>
    <label>Secondary Mail</label>
    <type>Email</type>
</CustomField>