force-app/main/default/objects/ROTA__c/fields/Secondary_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Name__c</fullName>
    <label>Secondary Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>