force-app/main/default/objects/ROTA__c/fields/Secondary_Team__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>ROTAS (Secondary Team)</relationshipLabel>
    <relationshipName>ROTAS1</relationshipName>
    <type>Lookup</type>
</CustomField>