force-app/main/default/objects/ROTA__c/fields/Shift_Type__c.field-meta.xml
<CustomField>
    <fullName>Shift_Type__c</fullName>
    <label>Shift Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Call</fullName>
            </value>
            <value>
                <fullName>On Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>