force-app/main/default/objects/ROTA__c/fields/SOE__c.field-meta.xml
<CustomField>
    <fullName>SOE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SOE</label>
    <referenceTo>SOE__c</referenceTo>
    <relationshipLabel>ROTAs</relationshipLabel>
    <relationshipName>ROTAs</relationshipName>
    <type>Lookup</type>
</CustomField>