force-app/main/default/objects/ROTA__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <length>30</length>
    <type>Text</type>
</CustomField>