force-app/main/default/objects/ROTA__c/validationRules/Shift_Type_is_On_Call.validationRule-meta.xml
<ValidationRule>
    <fullName>Shift_Type_is_On_Call</fullName>
    <active>true</active>
    <description>If shift type is &#39;On Call&#39; no.of hours cannot exceed 24.</description>
    <errorConditionFormula>AND( ISPICKVAL( Shift_Type__c , &#39;On Call&#39;) ,  (  End_Date__c  -  Start_Date__c  ) * 24   &gt;  24)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot exceed 24 Hours from Start date.</errorMessage>
</ValidationRule>