force-app/main/default/objects/ROTA__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SOE__c</columns>
    <columns>Name__c</columns>
    <columns>Email__c</columns>
    <columns>Secondary_Name__c</columns>
    <columns>Manager_Name__c</columns>
    <columns>Shift_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>